<resources>
    <string name="app_name">Liferay To Dos</string>
    <string name="title_activity_todos_list">Tasks</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_liferay_title">Liferay</string>

    <!-- Settings -->
    <string name="pref_liferay_server_title">Liferay Server</string>
    <string name="pref_company_id_title">Company Id</string>

    <string name="pref_default_liferay_server">http://192.168.65.1:8080</string>
    <string name="pref_default_company_id">20155</string>

    <!-- Drawer/Menu -->
    <string name="log_out">Log out</string>
    <string name="task_list">Task List</string>
    <string name="create_task">Create Task</string>
    <string name="openDrawer">-</string>
    <string name="closeDrawer">- -</string>

    <string-array name="spinner_filter_items_days">
        <item>Due Today</item>
        <item>Due Tomorrow</item>
        <item>Future</item>
        <item>Past Due</item>
    </string-array>
    <string name="title_activity_task_detail">Task Detail</string>
    <string name="title_activity_create_task">Create Task</string>

</resources>
