<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rivetlogic.mobile.liferaytodos.TodosListActivity" >


    <group android:checkableBehavior="single"
        android:id="@+id/group_actions" >
        <item
            android:id="@+id/navigation_list"
            android:icon="@drawable/default_arrow"
            android:title="@string/task_list"/>

        <item
            android:id="@+id/navigation_create"
            android:icon="@drawable/default_arrow"
            android:title="@string/create_task"/>

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_log_out" >
        <item
            android:id="@+id/navigation_logout"
            android:icon="@drawable/default_user_icon"
            android:title="@string/log_out"/>
    </group>

</menu>